RESOLVED FIXED259912
[WPE][Debug] ASSERTION FAILED: inProgrammaticScroll == (options.type == ScrollType::Programmatic)
https://bugs.webkit.org/show_bug.cgi?id=259912
Summary [WPE][Debug] ASSERTION FAILED: inProgrammaticScroll == (options.type == Scrol...
Diego Pino
Reported 2023-08-07 19:50:36 PDT
Several tests are crashing with error: ASSERTION FAILED: inProgrammaticScroll == (options.type == ScrollType::Programmatic) css3/scroll-snap/scroll-padding-mainframe-paging.html css3/scroll-snap/scroll-padding-overflow-paging.html css3/scroll-snap/scroll-snap-click-scrollbar-gutter.html fast/dom/vertical-scrollbar-in-rtl.html fast/events/prevent-default-prevents-interaction-with-scrollbars.html fast/events/scroll-after-click-on-tab-index.html fast/scrolling/keyboard-scrolling-distance-pageDown.html fast/scrolling/scrollbar-mousedown-move-mouseup.html fast/spatial-navigation/snav-unit-overflow-and-scroll-in-direction.html fullscreen/full-screen-min-max-width-height.html Sample backtrace for css3/scroll-snap/scroll-padding-mainframe-paging.html: ``` Thread 1 (Thread 0x7f0cbcf97ec0 (LWP 2628)): #0 WTFCrash() () at /app/webkit/Source/WTF/wtf/Assertions.cpp:327 #1 0x00007f0cce0b8191 in WTFCrashWithInfo(int, char const*, char const*, int) () at /app/webkit/WebKitBuild/Debug/WTF/Headers/wtf/Assertions.h:762 #2 0x00007f0cd5e52f65 in WebCore::AsyncScrollingCoordinator::requestScrollToPosition(WebCore::ScrollableArea&, WebCore::IntPoint const&, WebCore::ScrollPositionChangeOptions const&) (this=0x7f0cb30ae2a0, scrollableArea=..., scrollPosition=..., options=...) at /app/webkit/So #3 0x00007f0cd5c9b384 in WebCore::LocalFrameView::requestScrollToPosition(WebCore::IntPoint const&, WebCore::ScrollPositionChangeOptions const&) (this=0x7ef7c60000b0, position=..., options=...) at /app/webkit/Source/WebCore/page/LocalFrameView.cpp:3104 #4 0x00007f0cd5f1ff83 in WebCore::ScrollableArea::scrollToPositionWithAnimation(WebCore::FloatPoint const&, WebCore::ScrollPositionChangeOptions const&) (this=0x7ef7c6000100, position=..., options=...) at /app/webkit/Source/WebCore/platform/ScrollableArea.cpp:178 #5 0x00007f0cd5f12f99 in WebCore::ScrollAnimator::singleAxisScroll(WebCore::ScrollEventAxis, float, WTF::OptionSet<WebCore::ScrollAnimator::ScrollBehavior>) (this=0x7f0cb31de7a0, axis=WebCore::ScrollEventAxis::Vertical, scrollDelta=545, behavior=...) at /app/webkit/Source/W #6 0x00007f0cd5f1fbde in WebCore::ScrollableArea::scroll(WebCore::ScrollDirection, WebCore::ScrollGranularity, unsigned int) (this=0x7ef7c6000100, direction=WebCore::ScrollDown, granularity=WebCore::ScrollGranularity::Page, stepCount=1) at /app/webkit/Source/WebCore/platfor #7 0x00007f0cd5f193fe in WebCore::ScrollView::scroll(WebCore::ScrollDirection, WebCore::ScrollGranularity) (this=0x7ef7c60000b0, direction=WebCore::ScrollDown, granularity=WebCore::ScrollGranularity::Page) at /app/webkit/Source/WebCore/platform/ScrollView.cpp:561 #8 0x00007f0cd5f19477 in WebCore::ScrollView::logicalScroll(WebCore::ScrollLogicalDirection, WebCore::ScrollGranularity) (this=0x7ef7c60000b0, direction=WebCore::ScrollBlockDirectionForward, granularity=WebCore::ScrollGranularity::Page) at /app/webkit/Source/WebCore/platfor #9 0x00007f0cd5c23abb in WebCore::EventHandler::logicalScrollRecursively(WebCore::ScrollLogicalDirection, WebCore::ScrollGranularity, WebCore::Node*) (this=0x7f0cb30543a0, direction=WebCore::ScrollBlockDirectionForward, granularity=WebCore::ScrollGranularity::Page, starting #10 0x00007f0cd5c2ec8c in WebCore::EventHandler::defaultKeyboardScrollEventHandler(WebCore::KeyboardEvent&, WebCore::ScrollLogicalDirection, WebCore::ScrollGranularity) (this=0x7f0cb30543a0, event=..., direction=WebCore::ScrollBlockDirectionForward, granularity=WebCore::Scro #11 0x00007f0cd5c2ede0 in WebCore::EventHandler::defaultPageUpDownEventHandler(WebCore::KeyboardEvent&) (this=0x7f0cb30543a0, event=...) at /app/webkit/Source/WebCore/page/EventHandler.cpp:4412 #12 0x00007f0cd5c2e590 in WebCore::EventHandler::defaultKeyboardEventHandler(WebCore::KeyboardEvent&) (this=0x7f0cb30543a0, event=...) at /app/webkit/Source/WebCore/page/EventHandler.cpp:3989 #13 0x00007f0cd4f50790 in WebCore::Node::defaultEventHandler(WebCore::Event&) (this=0x7ef7c6024dc0, event=...) at /app/webkit/Source/WebCore/dom/Node.cpp:2492 #14 0x00007f0cd4eabbf7 in WebCore::callDefaultEventHandlersInBubblingOrder(WebCore::Event&, WebCore::EventPath const&) (event=..., path=...) at /app/webkit/Source/WebCore/dom/EventDispatcher.cpp:65 #15 0x00007f0cd4eac833 in WebCore::EventDispatcher::dispatchEvent(WebCore::Node&, WebCore::Event&) (node=..., event=...) at /app/webkit/Source/WebCore/dom/EventDispatcher.cpp:210 #16 0x00007f0cd4f502ef in WebCore::Node::dispatchEvent(WebCore::Event&) (this=0x7ef7c6024dc0, event=...) at /app/webkit/Source/WebCore/dom/Node.cpp:2448 #17 0x00007f0cd5c2d561 in WebCore::EventHandler::internalKeyEvent(WebCore::PlatformKeyboardEvent const&) (this=0x7f0cb30543a0, initialKeyEvent=...) at /app/webkit/Source/WebCore/page/EventHandler.cpp:3800 #18 0x00007f0cd5c2c917 in WebCore::EventHandler::keyEvent(WebCore::PlatformKeyboardEvent const&) (this=0x7f0cb30543a0, keyEvent=...) at /app/webkit/Source/WebCore/page/EventHandler.cpp:3644 #19 0x00007f0cd6b4cac2 in WebCore::UserInputBridge::handleKeyEvent(WebCore::PlatformKeyboardEvent const&, WebCore::InputSource) (this=0x7f0cb3001cb0, keyEvent=...) at /app/webkit/Source/WebCore/replay/UserInputBridge.cpp:98 #20 0x00007f0ccf8ba060 in WebKit::handleKeyEvent(WebKit::WebKeyboardEvent const&, WebCore::Page*) (keyboardEvent=..., page=0x7f0cb30b4100) at /app/webkit/Source/WebKit/WebProcess/WebPage/WebPage.cpp:3566 #21 0x00007f0ccf8ba17b in WebKit::WebPage::keyEvent(WebKit::WebKeyboardEvent const&) (this=0x7f0cb30bc730, keyboardEvent=...) at /app/webkit/Source/WebKit/WebProcess/WebPage/WebPage.cpp:3579 #22 0x00007f0cce619082 in _ZZN3IPC18callMemberFunctionIN6WebKit7WebPageES2_FvRKNS1_16WebKeyboardEventEESt5tupleIJS3_EEEEvPT_MT0_T1_OT2_ENKUlDpOT_E_clIJS3_EEEDaSI_ (__closure=0x7ffc96b3fdf0) at /app/webkit/Source/WebKit/Platform/IPC/HandleMessage.h:136 #23 0x00007f0cce64a919 in _ZSt13__invoke_implIvZN3IPC18callMemberFunctionIN6WebKit7WebPageES3_FvRKNS2_16WebKeyboardEventEESt5tupleIJS4_EEEEvPT_MT0_T1_OT2_EUlDpOT_E_JS4_EESA_St14__invoke_otherOSC_DpOT1_ (__f=...) at /usr/include/c++/12.2.0/bits/invoke.h:61 #24 0x00007f0cce6311ac in _ZSt8__invokeIZN3IPC18callMemberFunctionIN6WebKit7WebPageES3_FvRKNS2_16WebKeyboardEventEESt5tupleIJS4_EEEEvPT_MT0_T1_OT2_EUlDpOT_E_JS4_EENSt15__invoke_resultISA_JDpT0_EE4typeEOSA_DpOSM_ (__fn=...) at /usr/include/c++/12.2.0/bits/invoke.h:96 #25 0x00007f0cce6190cb in _ZSt12__apply_implIZN3IPC18callMemberFunctionIN6WebKit7WebPageES3_FvRKNS2_16WebKeyboardEventEESt5tupleIJS4_EEEEvPT_MT0_T1_OT2_EUlDpOT_E_S9_JLm0EEEDcOSA_OSC_St16integer_sequenceImJXspT1_EEE (__f=..., __t=...) at /usr/include/c++/12.2.0/tuple:1852 #26 0x00007f0cce619109 in _ZSt5applyIZN3IPC18callMemberFunctionIN6WebKit7WebPageES3_FvRKNS2_16WebKeyboardEventEESt5tupleIJS4_EEEEvPT_MT0_T1_OT2_EUlDpOT_E_S9_EDcOSA_OSC_ (__f=..., __t=...) at /usr/include/c++/12.2.0/tuple:1863 #27 0x00007f0cce61916e in IPC::callMemberFunction<WebKit::WebPage, WebKit::WebPage, void (WebKit::WebKeyboardEvent const&), std::tuple<WebKit::WebKeyboardEvent> >(WebKit::WebPage*, void (WebKit::WebPage::*)(WebKit::WebKeyboardEvent const&), std::tuple<WebKit::WebKeyboardEven #28 0x00007f0cce605660 in IPC::handleMessage<Messages::WebPage::KeyEvent, WebKit::WebPage, WebKit::WebPage, void (WebKit::WebKeyboardEvent const&)>(IPC::Connection&, IPC::Decoder&, WebKit::WebPage*, void (WebKit::WebPage::*)(WebKit::WebKeyboardEvent const&)) (connection=..., #29 0x00007f0cce5fcaea in WebKit::WebPage::didReceiveWebPageMessage(IPC::Connection&, IPC::Decoder&) (this=0x7f0cb30bc730, connection=..., decoder=...) at /app/webkit/WebKitBuild/Debug/DerivedSources/WebKit/WebPageMessageReceiver.cpp:326 #30 0x00007f0ccf8c0a89 in WebKit::WebPage::didReceiveMessage(IPC::Connection&, IPC::Decoder&) (this=0x7f0cb30bc730, connection=..., decoder=...) at /app/webkit/Source/WebKit/WebProcess/WebPage/WebPage.cpp:5819 #31 0x00007f0ccee914c8 in IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&) (this=0x7f0cb302c188, connection=..., decoder=...) at /app/webkit/Source/WebKit/Platform/IPC/MessageReceiverMap.cpp:129 #32 0x00007f0ccf5bd2eb in WebKit::WebProcess::didReceiveMessage(IPC::Connection&, IPC::Decoder&) (this=0x7f0cb302c150, connection=..., decoder=...) at /app/webkit/Source/WebKit/WebProcess/WebProcess.cpp:928 #33 0x00007f0ccee65f7b in IPC::Connection::dispatchMessage(IPC::Decoder&) (this=0x7f0cb30581e0, decoder=...) at /app/webkit/Source/WebKit/Platform/IPC/Connection.cpp:1232 #34 0x00007f0ccee661c6 in IPC::Connection::dispatchMessage(std::unique_ptr<IPC::Decoder, std::default_delete<IPC::Decoder> >) (this=0x7f0cb30581e0, message=std::unique_ptr<IPC::Decoder> = {...}) at /app/webkit/Source/WebKit/Platform/IPC/Connection.cpp:1280 #35 0x00007f0ccee6f678 in IPC::Connection::SyncMessageState::ConnectionAndIncomingMessage::dispatch() (this=0x7ffc96b410b0) at /app/webkit/Source/WebKit/Platform/IPC/Connection.cpp:142 #36 0x00007f0ccee610e4 in IPC::Connection::SyncMessageState::dispatchMessages(WTF::Function<void (IPC::MessageName, unsigned long)>&&) (this=0x561e35c94af0, willDispatchMessage=...) at /app/webkit/Source/WebKit/Platform/IPC/Connection.cpp:250 #37 0x00007f0ccee65748 in IPC::Connection::dispatchSyncMessage(IPC::Decoder&) (this=0x7f0cb30581e0, decoder=...) at /app/webkit/Source/WebKit/Platform/IPC/Connection.cpp:1106 #38 0x00007f0ccee661a6 in IPC::Connection::dispatchMessage(std::unique_ptr<IPC::Decoder, std::default_delete<IPC::Decoder> >) (this=0x7f0cb30581e0, message=std::unique_ptr<IPC::Decoder> = {...}) at /app/webkit/Source/WebKit/Platform/IPC/Connection.cpp:1278 #39 0x00007f0ccee6f678 in IPC::Connection::SyncMessageState::ConnectionAndIncomingMessage::dispatch() (this=0x7ffc96b41270) at /app/webkit/Source/WebKit/Platform/IPC/Connection.cpp:142 #40 0x00007f0ccee610e4 in IPC::Connection::SyncMessageState::dispatchMessages(WTF::Function<void (IPC::MessageName, unsigned long)>&&) (this=0x561e35c94af0, willDispatchMessage=...) at /app/webkit/Source/WebKit/Platform/IPC/Connection.cpp:250 #41 0x00007f0ccee63f7c in IPC::Connection::waitForSyncReply(WTF::ObjectIdentifierGeneric<IPC::Connection::SyncRequestIDType, WTF::ObjectIdentifierThreadSafeAccessTraits>, IPC::MessageName, IPC::Timeout, WTF::OptionSet<IPC::SendSyncOption>) (this=0x7f0cb30581e0, syncRequestID #42 0x00007f0ccee63e4b in IPC::Connection::sendSyncMessage(WTF::ObjectIdentifierGeneric<IPC::Connection::SyncRequestIDType, WTF::ObjectIdentifierThreadSafeAccessTraits>, WTF::UniqueRef<IPC::Encoder>&&, IPC::Timeout, WTF::OptionSet<IPC::SendSyncOption>) (this=0x7f0cb30581e0, #43 0x00007f0ccf8f6cbf in IPC::Connection::sendSync<Messages::WebPageProxy::HandleSynchronousMessage>(Messages::WebPageProxy::HandleSynchronousMessage&&, unsigned long, IPC::Timeout, WTF::OptionSet<IPC::SendSyncOption>) (this=0x7f0cb30581e0, message=..., destinationID=24, ti #44 0x00007f0ccf8ede1f in IPC::MessageSender::sendSync<Messages::WebPageProxy::HandleSynchronousMessage>(Messages::WebPageProxy::HandleSynchronousMessage&&, unsigned long, IPC::Timeout, WTF::OptionSet<IPC::SendSyncOption>) (this=0x7f0cb30bc760, message=..., destinationID=24, #45 0x00007f0ccf8e2963 in IPC::MessageSender::sendSync<Messages::WebPageProxy::HandleSynchronousMessage>(Messages::WebPageProxy::HandleSynchronousMessage&&, IPC::Timeout, WTF::OptionSet<IPC::SendSyncOption>) (this=0x7f0cb30bc760, message=..., timeout=..., options=...) at /ap #46 0x00007f0ccf8c5aea in WebKit::WebPage::postSynchronousMessageForTesting(WTF::String const&, API::Object*, WTF::RefPtr<API::Object, WTF::RawPtrTraits<API::Object>, WTF::DefaultRefDerefTraits<API::Object> >&) (this=0x7f0cb30bc730, messageName=..., messageBody=0x7f0cb348e04 #47 0x00007f0ccf68c408 in WKBundlePagePostSynchronousMessageForTesting(WKBundlePageRef, WKStringRef, WKTypeRef, WKTypeRef*) (pageRef=0x7f0cb30bc730, messageNameRef=0x7f0cb33fe400, messageBodyRef=0x7f0cb348e040, returnRetainedDataRef=0x0) at /app/webkit/Source/WebKit/WebProce #48 0x00007f0c57027274 in WTR::postSynchronousPageMessage<OpaqueWKDictionary*>(char const*, WebKit::WKRetainPtr<OpaqueWKDictionary*> const&) (name=0x7f0c56c13a2c "EventSender", value=...) at /app/webkit/Tools/WebKitTestRunner/InjectedBundle/InjectedBundle.h:280 #49 0x00007f0c57024d45 in WTR::EventSendingController::keyDown(OpaqueJSString*, OpaqueJSValue const*, int) (this=0x7f0cb347b4b0, key=0x7f0cb33fd5a0, modifierArray=0x7f0c6235c1c0, location=0) at /app/webkit/Tools/WebKitTestRunner/InjectedBundle/EventSendingController.cpp:331 #50 0x00007f0c57080742 in WTR::JSEventSendingController::keyDown(OpaqueJSContext const*, OpaqueJSValue*, OpaqueJSValue*, unsigned long, OpaqueJSValue const* const*, OpaqueJSValue const**) (context=0x7f0c6201f068, thisObject=0x7f0c62188440, argumentCount=2, arguments=0x7ffc96 #51 0x00007f0ccfb384be in JSC::APICallbackFunction::callImpl<JSC::JSCallbackFunction>(JSC::JSGlobalObject*, JSC::CallFrame*) (globalObject=0x7f0c6201f068, callFrame=0x7ffc96b418c0) at /app/webkit/Source/JavaScriptCore/API/APICallbackFunction.h:61 #52 0x00007f0ccfb36043 in JSC::callJSCallbackFunction(JSC::JSGlobalObject*, JSC::CallFrame*) (globalObject=0x7f0c6201f068, callFrame=0x7ffc96b418c0) at /app/webkit/Source/JavaScriptCore/API/JSCallbackFunction.cpp:42 #53 0x00007f0c72790027 in () STDERR: ASSERTION FAILED: inProgrammaticScroll == (options.type == ScrollType::Programmatic) STDERR: /app/webkit/Source/WebCore/page/scrolling/AsyncScrollingCoordinator.cpp(333) : virtual bool WebCore::AsyncScrollingCoordinator::requestScrollToPosition(WebCore::ScrollableArea&, const WebCore::ScrollPosition&, const WebCore::ScrollPositionChangeOptions&)
Attachments
Claudio Saavedra
Comment 1 2023-11-10 08:05:42 PST
Vitaly Dyackhov
Comment 2 2023-11-13 02:21:06 PST
EWS
Comment 3 2023-11-16 02:14:16 PST
Committed 270820@main (50aa99222474): <https://commits.webkit.org/270820@main> Reviewed commits have been landed. Closing PR #20409 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2023-11-16 02:15:14 PST
Note You need to log in before you can comment on or make changes to this bug.