[WPE][Debug] ASSERTION FAILED: inProgrammaticScroll == (options.type == ScrollType::Programmatic) https://bugs.webkit.org/show_bug.cgi?id=259912

Reviewed by NOBODY (OOPS!).

If ScrollPositionChangeOptions is created with a programmatic type,
the ScrollableArea needs to know we're going to scroll programmatically
too.

* Source/WebCore/platform/ScrollAnimator.cpp:
(WebCore::ScrollAnimator::singleAxisScroll):